feat: add AdminController and enhance authentication flow with role-based access control