@@ -5,12 +5,14 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
+import java.util.Locale;
 
 public class JwtFilter extends OncePerRequestFilter {
 
@@ -27,11 +29,20 @@ public class JwtFilter extends OncePerRequestFilter {
         String header = request.getHeader("Authorization");
         if (header != null && header.startsWith("Bearer ")) {
             String token = header.substring(7);
-            String subject = jwtUtil.getSubject(token);
-            if (subject != null && SecurityContextHolder.getContext().getAuthentication() == null) {
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(subject, null, Collections.emptyList());
-                auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                SecurityContextHolder.getContext().setAuthentication(auth);
+            String[] subjectAndPerfil = jwtUtil.getSubject(token);
+            if (subjectAndPerfil != null && subjectAndPerfil.length >= 2 && SecurityContextHolder.getContext().getAuthentication() == null) {
+                String subject = subjectAndPerfil[0];
+                String perfil = subjectAndPerfil[1];
+                if (perfil != null && !perfil.isBlank()) {
+                    String role = "ROLE_" + perfil.trim().toUpperCase(Locale.ROOT);
+                    UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(
+                            subject,
+                            null,
+                            List.of(new SimpleGrantedAuthority(role))
+                    );
+                    auth.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                    SecurityContextHolder.getContext().setAuthentication(auth);
+                }
             }
         }
         filterChain.doFilter(request, response);
